welcomepage and css

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,6 +4,6 @@
     <title>Flask Web App</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1 rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">Welcome to ACEest Fitness!!</h1>
 </body>
 </html>
