--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Flask Web App</title>
+    <meta charset="utf-8">
+    <title>Flask Web App</title>      
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-<body>
-    <h1 rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">Welcome to ACEest Fitness!!</h1>
+<body class="body">
+    <h1 class="title">  Welcome to ACEest Fitness!! </h1>
+     <label>hello</label>
 </body>
 </html>
