--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+   <head>
+    <meta charset="utf-8">
+    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
    <body>
       <form action = "http://127.0.0.1:5000//tempaltes/login" method = "post">
          <p>Enter Name:</p>
-         <p><input type = "text"  id="name" name = "nm" /></p>
+         <p><label>First name:input type = "text"  id="name" name = "nm" /></label></p>
          <p><input type = "submit" value = "submit" /></p>
       </form>
    </body>
