--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <title>Flask Web App</title>      
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='indexPage.css') }}">
 </head>
-<body class="body">
-    <h1 class="title">  Welcome to ACEest Fitness!! </h1>
-     <label>hello</label>
+<body>
+    <h1  class="h1">Welcome to Flask Web Application</h1>
+    <form action="/submit" method="post">
+        <label for="name">Enter your name:<input type="text" id="name" name="name"></label>  
+        <input type = "submit" value = "Submit" />
+    </form>
 </body>
 </html>
