--- a/static/indexPage.css
+++ b/static/indexPage.css
@@ -1,23 +1,24 @@
 .body {
     font-family: Arial, sans-serif;
-    background-color: #1758ba;
+    background-color: #d8dde4;
     text-align: center;
     margin-top: 50px;
 }
 
-h1 {
-    color: #502c2d;
+.h1 {
+    color: #460707;
 }
 .title {
-    color: #502c2d;
+    color: #000000;
     font-family: Arial, sans-serif;
 }
 
-label {
-     background-color: #3498db;
-     color: white;
+.label {
+     color: rgb(95, 129, 222);
 }
-a.button {
+
+
+.button {
     display: inline-block;
     padding: 10px 20px;
     background-color: #3498db;
@@ -25,7 +26,6 @@ a.button {
     text-decoration: none;
     border-radius: 5px;
 }
-
-a.button:hover {
+.button:hover {
     background-color: #2980b9;
 }
