--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,10 @@
     <meta charset="utf-8">
     <title>Flask Web App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
+
 <body>
-    <h1>Welcome to Flask Web Application</h1>
-    <form action="/submit" method="post">
-        <label for="name">Enter your name:</label>
-        <input type="text" id="name" name="name">
-        <button type="submit">Submit</button>
-    </form>
+    <h1 class="welcomelabel">  Welcome to ACEest Fitness!! </h1>
 </body>
 </html>
