--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{{ url_for('static', filename='indexPage.css') }}">
 </head>
    <body>
-      <form action = "http://127.0.0.1:5000//tempaltes/login" method = "post">
-         <p>Enter Name:</p>
-         <p><label>First name:input type = "text"  id="name" name = "nm" /></label></p>
-         <p><input type = "submit" value = "submit" /></p>
+      <form action = "/login" method = "post">
+         <p>
+            <label class="label">Enter Name:<input type = "text"  id="name" name = "name" /></label>
+            <input class="button" type = "submit" value = "Submit" />
+         </p>
       </form>
    </body>
 </html>
