--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
    <body>
       <form action = "/login" method = "post">
          <p>
-            <label class="label">Enter Name:<input type = "text"  id="name" name = "name" /></label>
+            <label class="label">Enter your Name:<input type = "text"  id="name" name = "name" /></label>
             <input class="button" type = "submit" value = "Submit" />
          </p>
       </form>
